--- a/index.html
+++ b/index.html
@@ -17,13 +17,11 @@
 	</body>
 	
 	<script type="text/javascript">
-		words = [{text: "Jeg", red: false}, {text: "gikk", red: true}, {text: "en", red: false}, {text: "tur", red: true}, {text: "på", red: false}];
-		/*words[0] = {text: "Jeg", red: false};
-		words[1] = {text: "gikk", red: true};
-		words[2] = {text: "en", red: false};
-		words[3] = {text: "tur", red: true};
-		words[4] = {text: "på", red: false};*/
+		<!-- Format: add_task('Task as string', [list of red boxes]); -->
+		<!-- Red boxes can be omitted; in that case, two random ones are generated -->
+		add_task('Per Spellmann han hadde ei einaste');
+		add_task('Jeg gikk en tur på', [1, 3]);
 		
-		initialize();
+		init();
 	</script>
 </html>
